--- a/src/html/captcha.html
+++ b/src/html/captcha.html
@@ -1,38 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Captcha Verification</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 50px;
-    }
-    .slider {
-      width: 300px;
-      margin: 20px auto;
-    }
-    #captcha-img {
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
+    body { font-family: sans-serif; text-align: center; margin: 50px; }
+    .slider { width: 300px; margin: 20px auto; }
   </style>
 </head>
 <body>
   <h1>Complete the Puzzle</h1>
   <img id="captcha-img" src="" alt="Captcha Image" width="300">
-  <div>
-    <input type="range" min="0" max="100" value="0" class="slider" id="captcha-slider">
-  </div>
+  <input type="range" min="0" max="100" value="0" class="slider" id="captcha-slider">
   <button onclick="verify()">Verify</button>
-  <p id="result" style="font-weight: bold; color: red;"></p>
 
   <script>
     let challengeId;
 
-    // Fetch captcha from API
     fetch('/captcha')
       .then(res => res.json())
       .then(data => {
@@ -48,18 +31,7 @@
         body: JSON.stringify({ challengeId, position })
       })
       .then(res => res.json())
-      .then(data => {
-        const resultEl = document.getElementById('result');
-        if (data.success) {
-          resultEl.style.color = 'green';
-          resultEl.textContent = '✅ Verified! Redirecting...';
-          setTimeout(() => {
-            window.location.href = 'https://your-redirect-url.com'; // Replace with actual redirect
-          }, 2000);
-        } else {
-          resultEl.textContent = '❌ Try again!';
-        }
-      });
+      .then(data => alert(data.success ? 'Verified!' : 'Try again'));
     }
   </script>
 </body>
