--- a/src/html/captcha.html
+++ b/src/html/captcha.html
@@ -4,33 +4,34 @@
 <meta charset="UTF-8">
 <title>Captcha Verification</title>
 <style>
-  body { font-family: sans-serif; text-align: center; margin: 50px; }
-  .slider-container { position: relative; width: 300px; margin: auto; }
-  .bg { width: 100%; }
-  .piece { position: absolute; top: 50px; cursor: grab; }
-  .slider { width: 100%; margin-top: 20px; }
+body { font-family: sans-serif; text-align: center; margin: 50px; }
+.slider-container { position: relative; width: 300px; height: 150px; margin: auto; overflow: hidden; }
+.bg { width: 100%; height: auto; }
+.piece { position: absolute; top: 50px; width: 50px; height: 50px; }
+.slider { width: 100%; margin-top: 20px; }
 </style>
 </head>
 <body>
-<h2>Complete the Puzzle</h2>
+<h2>Slide Puzzle Verification</h2>
 <div class="slider-container">
   <img id="bg" class="bg" />
   <img id="piece" class="piece" />
 </div>
 <input type="range" id="slider" class="slider" min="0" max="250" value="0" />
 <p id="status"></p>
+
 <script>
 const token = location.pathname.split('/').pop();
-let challengeId, positionX;
+let challengeId;
 
 async function loadCaptcha() {
   const res = await fetch(`/captcha?token=${token}`);
   const data = await res.json();
 
-  document.getElementById('bg').src = data.image;
-  document.getElementById('piece').src = data.piece;
+  document.getElementById('bg').src = data.bgUrl;
+  document.getElementById('piece').src = data.pieceUrl;
+
   challengeId = data.challengeId;
-  positionX = data.positionX;
 }
 loadCaptcha();
 
