--- a/src/html/verify.html
+++ b/src/html/verify.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Verification</title>
-  <link rel="stylesheet" href="/css/verify.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Verify Puzzle</title>
+<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <div class="container">
-    <h2>Complete the Puzzle to Verify</h2>
-    <div class="puzzle-container">
-      <img id="main-img" />
-      <canvas id="piece" width="50" height="50"></canvas>
-    </div>
-    <input type="range" id="slider" min="0" max="250" value="0" />
-    <button id="verify-btn">Verify</button>
-    <div class="msg" id="msg"></div>
-  </div>
-  <script>
-    window.VERIFY_DATA = {
-      token: "{{TOKEN}}",
-      image: "{{IMAGE}}"
-    };
-  </script>
-  <script src="/js/verify.js"></script>
+<h2>Solve the puzzle to continue</h2>
+<div class="puzzle-container">
+  <img id="puzzle-image" src="{{IMAGE}}" alt="Puzzle">
+  <input type="range" id="slider" min="0" max="300" value="0">
+  <button id="verify-btn">Verify</button>
+  <p id="message"></p>
+</div>
+<script>
+  const token = "{{TOKEN}}";
+</script>
+<script src="/js/verify.js"></script>
 </body>
 </html>
