--- a/index.html
+++ b/index.html
@@ -23,48 +23,56 @@
 
     let pieceX = 0;
 
-    const img = new Image();
-    img.src = captchaConfig.image;
+    // ✅ Worker injects captchaConfig here
+    // <script id="captcha-config"></script> will be replaced dynamically
 
-    img.onload = () => {
-      // Draw background with missing piece
-      bgCtx.drawImage(img, 0, 0, 300, 200);
-      bgCtx.clearRect(captchaConfig.cutX, captchaConfig.cutY, captchaConfig.size, captchaConfig.size);
-
-      // Draw the puzzle piece
-      pieceCanvas.width = captchaConfig.size;
-      pieceCanvas.height = captchaConfig.size;
-      pieceCtx.drawImage(
-        img,
-        captchaConfig.cutX, captchaConfig.cutY, captchaConfig.size, captchaConfig.size,
-        0, 0, captchaConfig.size, captchaConfig.size
-      );
-
-      // Position piece vertically aligned
-      pieceCanvas.style.top = captchaConfig.cutY + "px";
-      pieceCanvas.style.left = "0px";
-    };
-
-    slider.addEventListener("input", (e) => {
-      pieceX = parseInt(e.target.value);
-      pieceCanvas.style.left = pieceX + "px";
-    });
-
-    document.getElementById("verifyBtn").onclick = async () => {
-      const res = await fetch("/verify-submit", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ token: captchaConfig.token, userX: pieceX })
-      });
-      const data = await res.json();
-      if (data.success) {
-        window.location.href = data.redirect;
-      } else {
-        alert(data.msg);
+    window.addEventListener("load", () => {
+      if (!window.captchaConfig) {
+        alert("Captcha failed to load.");
+        return;
       }
-    };
+
+      const img = new Image();
+      img.src = captchaConfig.image;
+
+      img.onload = () => {
+        bgCtx.drawImage(img, 0, 0, 300, 200);
+        bgCtx.clearRect(captchaConfig.cutX, captchaConfig.cutY, captchaConfig.size, captchaConfig.size);
+
+        pieceCanvas.width = captchaConfig.size;
+        pieceCanvas.height = captchaConfig.size;
+        pieceCtx.drawImage(
+          img,
+          captchaConfig.cutX, captchaConfig.cutY, captchaConfig.size, captchaConfig.size,
+          0, 0, captchaConfig.size, captchaConfig.size
+        );
+
+        pieceCanvas.style.top = captchaConfig.cutY + "px";
+        pieceCanvas.style.left = "0px";
+      };
+
+      slider.addEventListener("input", (e) => {
+        pieceX = parseInt(e.target.value);
+        pieceCanvas.style.left = pieceX + "px";
+      });
+
+      document.getElementById("verifyBtn").onclick = async () => {
+        const res = await fetch("/verify-submit", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ token: captchaConfig.token, userX: pieceX })
+        });
+        const data = await res.json();
+        if (data.success) {
+          window.location.href = data.redirect;
+        } else {
+          alert(data.msg);
+        }
+      };
+    });
   </script>
-  <script></script> <!-- Worker injects captchaConfig here -->
+
+  <!-- Placeholder for Worker injection -->
+  <script id="captcha-config"></script>
 </body>
 </html>
-        
