--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
       max-width: 400px;
       width: 100%;
     }
+    h2 {
+      color: #333;
+      margin-bottom: 20px;
+      font-weight: 600;
+    }
     .image-container {
       position: relative;
       margin-bottom: 20px;
@@ -32,6 +37,10 @@
       overflow: hidden;
       height: 200px;
       width: 100%;
+      background: linear-gradient(45deg, #f0f0f0 25%, transparent 25%, transparent 75%, #f0f0f0 75%),
+                 linear-gradient(45deg, #f0f0f0 25%, transparent 25%, transparent 75%, #f0f0f0 75%);
+      background-size: 20px 20px;
+      background-position: 0 0, 10px 10px;
       display: flex;
       align-items: center;
       justify-content: center;
