--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Captcha Verification</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="https://www.google.com/recaptcha/api.js?render=your_site_key"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6Lc2LtkrAAAAAJbXj3HbkYzYT55rwX9TgwdGTI4r"></script>
 </head>
 <body>
   <div class="container">
